# zotero-mcp

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
docs/: getting-started.md
src/zotero-mcp/: __init__.py  better_bibtex_client.py  cli.py  client.py  semantic_search.py  setup_helper.py
src/zotero_mcp/: better_bibtex_client.py  chroma_client.py  cli.py  client.py  local_db.py  pdfannots_downloader.py  pdfannots_helper.py  semantic_search.py  server.py  setup_helper.py  updater.py  utils.py
