[project]
name = "zotero-mcp"
description = "A Model Context Protocol server for Zotero (fork of 54yyyu)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "54yyyu", email = "54yyyu@github.com" },
  { name = "ypsilonkah", email = "kontakt@yannickkalff.de" },
]
maintainers = [
  { name = "ypsilonkah", email = "kontakt@yannickkalff.de" },
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "chromadb>=0.4.0",
  "fastmcp>=2.14.0",
  "google-genai>=0.7.0",
  "markitdown[pdf]",
  "mcp>=1.2.0",
  "openai>=1.0.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
  "pyzotero>=1.5.0",
  "requests>=2.28.0",
  "sentence-transformers>=2.2.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/ypsilonkah/zotero-mcp"
Repository = "https://github.com/ypsilonkah/zotero-mcp.git"

[project.scripts]
zotero-mcp = "zotero_mcp.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "black>=23.0.0",
  "isort>=5.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.hatch.version]
path = "src/zotero_mcp/_version.py"

[tool.isort]
profile = "black"
